fix(HomePage): Fix z-index

--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -1,7 +1,6 @@
 .header-container {
   height: 170px;
   width: 100%;
-  z-index: 2;
   position: absolute;
   top: 0;
   left: 0;
@@ -13,11 +12,11 @@
     position: absolute;
     top: 0;
     left: 0;
-    z-index: 1;
+    z-index: 3;
     padding: 30px 0 0 30px;
     .heading-1,
     .logo-link {
-      display: block;
+      display: inline-block;
       height: 100%;
     }
   }
@@ -29,7 +28,7 @@
     position: absolute;
     top: 35px;
     right: 30px;
-    z-index: 2;
+    z-index: 4;
     @include transition(.5s);
     &.transform {
       .line-02 {
@@ -57,7 +56,7 @@
     position: absolute;
     top: 30px;
     right: 90px;
-    z-index: 1;
+    z-index: 3;
   }
 
   .menu-container {
@@ -77,23 +76,23 @@
       .list-item {
         padding: 20px 90px;
         margin: 0 0 30px;
-        .link {
-          display: block;
-          width: 100%;
-          padding: 10px 5px;
-          &.active {
-            border-bottom: 3px solid #498cca;
-          }
-          &:hover,
-          &.active {
-            [class^="icon-"] {
-              &:before {
-                color: $color-white;
-              }
-            }
-            .description {
+      }
+      .link {
+        display: block;
+        width: 100%;
+        padding: 10px 5px;
+        &.active {
+          border-bottom: 3px solid #498cca;
+        }
+        &:hover,
+        &.active {
+          [class^="icon-"] {
+            &:before {
               color: $color-white;
             }
+          }
+          .description {
+            color: $color-white;
           }
         }
       }
@@ -113,7 +112,7 @@
       }
     }
     &.menu-collapse {
-      z-index: 1;
+      z-index: 3;
     }
   }
 }
